--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.1",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/config": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -77,6 +78,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.30"
+        "symfony/maker-bundle": "^1.30",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
